@@ -1,6 +1,6 @@
 
 ############################################################################## 
-OpenGL::Font::2D:
+Games::OpenGL::Font::2D:
 
 * None known yet.
 
