@@ -13,29 +13,29 @@ not run its Makefile.PL or Build.PL.
 
 -----BEGIN PGP SIGNED MESSAGE-----
 
-SHA1 9f73428a801da21b45ef022070d6fab7557ef368 BUGS
-SHA1 30a146da553b9b7b24c474a9a2f29534a2852a5d CHANGES
+SHA1 0c92090c9d1e077a99b36194277ddc1199582db7 BUGS
+SHA1 398ab7139ce4e8bdd414b00aae2eeaebfa2f3af4 CHANGES
 SHA1 f4f1d6c08424bf7550a95ce6911045a98f69e0a8 CREDITS
 SHA1 d6a6c30ee6d9ba6b9afab8bbf6a25e1b23c744e0 LICENSE
 SHA1 5841d7b4f2e9e1f235ceb0ae7227cd4d71dc8a17 MANIFEST
 SHA1 14ba2ad03c1483a6125ce04cb63b7098a97482c5 Makefile.PL
-SHA1 5cef75e2ebc241aafb5076916beed58218dadeb0 README
-SHA1 b909b1738a078eb87260ca57f298a236c4e497e5 TODO
+SHA1 07c44b07a8fa9704ce07dc42c2d2eff2b0d58a31 README
+SHA1 41f53216265bfaef39688855e48f91475930e600 TODO
 SHA1 fe7311d4b22922ce4a4e666174c0bf9e359d0ff3 data/courier.bmp
-SHA1 f0de0c86bf0838cc3001c8f9d52ed73609f373d1 examples/font.pl
-SHA1 7c2b9dc524ad16677b055edc9b052b4786e821e1 examples/lib/SDL/App/FPS/MyFont.pm
-SHA1 2ec8f81a8b82da418bd36e9bd8493303d22d04d0 lib/Games/OpenGL/Font/2D.pm
+SHA1 e0d9e2f1ce30653ef538d607479ecf715a478195 examples/font.pl
+SHA1 989b9983e29f4cd98afa241c5b6e687e223033e7 examples/lib/SDL/App/FPS/MyFont.pm
+SHA1 05980c62b7b981fca3088d06bfc404359c910818 lib/Games/OpenGL/Font/2D.pm
 SHA1 1f3aaa713f195953b6b5202dfd4215360c4a2097 t/chars.txt
-SHA1 ad5748001bb8abb6eed63564b943adea2d8d2e23 t/font.t
+SHA1 feb32b889734512a7ea2ec632a98b9b3fd4f4658 t/font.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.0.6 (GNU/Linux)
 Comment: When cryptography is outlawed, bayl bhgynjf jvyy unir cevinpl.
 
-iQEVAwUBPnuKC3cLPEOTuEwVAQEZKQf/UEPHFnDQSGWWEoauEOKzm8GzUMZemvCa
-R+kQnsPVJ9dlbqACvhhWcmOxtWaxKl6vtjWW9HrWcksu/+H2jvjHKBBrSyw1yuf4
-/1tPI28fXPyNGCVtpJAUYNM+lAczvoBGHzNq6UT6XUPfqJw5+pNMd49jmBTPDSBj
-UDrYT8Bk4kgiWN0Zq6Hwv09Dlhi0ZXkDKKa2sSb/4xORtimToOqMTPioXjblDS/2
-dotxgU2ZpcEhMp3kG5MXWpWvYLyHJczM/IM9Uz7JdY51iq+Qeue5SgorOjxEOh4w
-wwoveX7+F1eLpRRLPVo9D0B+bGHvZxDkvilwI9A4URGy+K8c1M8RWw==
-=XAGN
+iQEVAwUBPn4a0XcLPEOTuEwVAQG51gf+OsSYpkgD75Lbdds/Ok73IPDWel84Oszo
+C3BaRwN3vC/44v1Wwkz0oWlp/TSu6PS5ZvZxCs4sGMdKddhqT8Hi6PhyIys4bDRn
+xAH+rKcOa8xtjkKlZWRRd2K7eCyHrmgvrxnEqcXTPUdRdAusHVHYSTz+K506867b
+iZWcmsJaU+cBIKAPvK2nQtw9NY8ifdFIoOuXQ2961IvSD0yqKIgQyYprAJfN5iFD
+tE9nnGFJMTXgIQN3YWZ+OOtySQVa/8A47x6+xBWVQyTYDpUBLURH1oJCbeSib4xp
+eEXpsvwT8yNSLBes1ZiT71zlT52bGUnSd+jXuQQywvnCNh2hxiC8rw==
+=aFnH
 -----END PGP SIGNATURE-----
