@@ -4,11 +4,22 @@ Games::OpenGL::Font::2D:
 
 2003-03-17 v0.01 Tels - 2 tests - first version
 2003-03-18 v0.02 Tels - 7 tests
-2003-03-21 v0.03 Tels - 7 tests - first release
+2003-03-21 v0.03 Tels - 6 tests - first release
   * adapted to SDL_perl 1.20.2 (see http://bloodgate.com/perl/sdl)
   * added pre_output() and post_output() for more speed
   * made my own font map (courier.bmp), which made much more parameters to
     new() neccessary: chars, chars_per_line, char_width, char_height etc.
+2003-03-23 v0.04 Tels - 8 tests
+  * removed double my's that caused warnings
+  * font.t refered to the wrong texture file, so it failed
+  * removed the set parameter, it does not make sense when you have more then
+    128 chars (no idea how you could access the other characters in the
+    example font from NeHe, I think having only one font per texture is much 
+    cleaner)
+  * added align_x(), align_y() and align(). Also constants FONT_ALIGN_foo, 
+    where foo is LEFT, RIGHT, TOP, BOTTOM or CENTER.
+  * added char_width(), char_height()
+  * fixed: color() takes array ref or 3 values
 
 Please send me test-reports, your experiences with this and your ideas - I love
 to hear about my work!
